<resources>
    <string name="app_name">Zungvi</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid name</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Password must be >6 characters</string>
    <string name="invalid_confirm_password">The two passwords don\'t match!!</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Explore</string>
    <string name="title_logout">Logout</string>
    <string name="title_share">Share </string>
    <string name="title_news">News</string>
    <string name="title_rate">Rate</string>
    <string name="title_tv">Online TV</string>
    <string name="about_menu">About</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activitydetails_list">Items</string>
    <string name="title_activitydetails_detail">activity_details Detail</string>
    <string name="title_activity_terms">Terms and conditions</string>
</resources>