<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/tv_menu"
        android:enabled="true"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/title_tv"
        />
    <item
        android:id="@+id/news_menu"
        android:enabled="true"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/title_news"
        />
    <item
        android:id="@+id/sharing_menu"
        android:enabled="true"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/title_share"
         />
    <item
        android:id="@+id/about_menu"
        android:title="@string/about_menu"/>
    <item
        android:id="@+id/logout_menu"
        android:icon="@drawable/ic_account_circle_black_24dp"
        android:title="@string/title_logout" />
</menu>